<?xml version="1.0"?>
<package format="2">
  <name>acoustic_postprocessing</name>
  <version>0.0.0</version>
  <description>TODO</description>
  <maintainer email="antoni.martorell@uib.es">uib</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>ros_numpy</depend>
  <depend>nav_msgs</depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>

</package>
